# linkedin-agent

./: .env.template  .gitignore  .graphifyignore  .pre-commit-config.yaml  01_base_agent.py  02_agent_tools.py  AGENTS.md  IMPLEMENTATION_PLAN.md  README.md  TASK.md  WALKTHROUGH.md  alembic.ini  completion.md  docker-compose.yml  my_context.md  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0001_init.py
archive/: 01_base_agent.py  02_agent_tools.py
docs/bugs/: 2026-04-30-day4-chunker-overlap-and-retrieve-mock.md
docs/rules/: coding.md  security.md
scripts/: index_context.py  refresh.sh
src/linkedin_agent/db/: __init__.py  models.py  repository.py  session.py
src/linkedin_agent/graph/: __init__.py  builder.py  nodes.py
src/linkedin_agent/rag/: __init__.py  chunker.py  embeddings.py
src/linkedin_agent/schemas/: __init__.py  agent_state.py  draft.py  outline.py  post_status.py  review.py
src/linkedin_agent/tools/: __init__.py  _llm.py  draft_post.py  plan_outline.py  publish_via_postboost.py  retrieve_context.py  review_post.py
tests/: conftest.py
tests/integration/: test_graph_flow.py  test_migrations.py  test_rag.py  test_repository.py
tests/unit/: test_chunker.py  test_graph_nodes.py  test_retrieve_context.py  test_schemas.py  test_tools.py
