[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "linkedin-agent"
version = "0.1.0"
description = "Autonomous LinkedIn content agent — LangGraph + RAG + pgvector + FastAPI + Streamlit"
requires-python = ">=3.12"
dependencies = [
    # LLM / agent
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langchain-google-genai>=2.0",
    "langchain-openai>=0.2",
    "langgraph>=0.2",
    "langsmith>=0.1",
    # Data / validation
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    # API
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "slowapi>=0.1.9",
    # Database
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "pgvector>=0.3",
    # Embedding
    "openai>=1.30",          # text-embedding-3-small
    # Dashboard
    "streamlit>=1.35",
    # HTTP / utilities
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "structlog>=24.1",
    "tenacity>=8.3",
    "graphifyy>=0.5.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-recording>=0.13",  # VCR cassettes
    "pytest-docker>=3.1",
    "vcrpy>=6.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/linkedin_agent"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["archive/", ".venv/"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
exclude = ["archive/", ".venv/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=src --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]
omit = ["src/linkedin_agent/dashboard/*"]

[tool.coverage.report]
fail_under = 75
